<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>co.uk.diyaccounting.spreadsheets</groupId>
    <artifactId>spreadsheets</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <properties>
        <cdk.version>2.238.0</cdk.version>
        <immutables.version>2.12.1</immutables.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>2.41.34</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>${immutables.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awscdk</groupId>
                <artifactId>aws-cdk-lib</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>software.constructs</groupId>
                <artifactId>constructs</artifactId>
                <version>10.5.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Provide javax.annotation (@Nullable) used by generated Immutables code -->
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
            <scope>compile</scope>
        </dependency>

        <!-- AWS CDK library -->
        <dependency>
            <groupId>software.amazon.awscdk</groupId>
            <artifactId>aws-cdk-lib</artifactId>
        </dependency>
        <dependency>
            <groupId>software.constructs</groupId>
            <artifactId>constructs</artifactId>
        </dependency>
        <dependency>
            <groupId>org.immutables</groupId>
            <artifactId>value</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- Route logs to System.out -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.1.0-alpha1</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- Configure resource directories -->
        <resources>
            <resource>
                <directory>infra/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <!-- Spotless code formatting plugin -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <java>
                        <includes>
                            <include>infra/main/java/**/*.java</include>
                        </includes>
                        <palantirJavaFormat>
                            <version>2.71.0</version>
                        </palantirJavaFormat>
                        <removeUnusedImports></removeUnusedImports>
                        <importOrder></importOrder>
                        <endWithNewline></endWithNewline>
                    </java>
                    <pom>
                        <includes>
                            <include>pom.xml</include>
                        </includes>
                        <sortPom>
                            <lineSeparator>\n</lineSeparator>
                            <expandEmptyElements>true</expandEmptyElements>
                            <keepBlankLines>true</keepBlankLines>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                            <sortDependencies>scope,groupId,artifactId</sortDependencies>
                            <sortPlugins>groupId,artifactId</sortPlugins>
                            <sortProperties>true</sortProperties>
                            <sortModules>true</sortModules>
                            <sortExecutions>true</sortExecutions>
                        </sortPom>
                        <trimTrailingWhitespace></trimTrailingWhitespace>
                        <endWithNewline></endWithNewline>
                    </pom>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>install</phase>
                    </execution>
                </executions>
            </plugin>
            <!-- Create the spreadsheets JAR with correct main class -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>retag-spreadsheets</id>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <phase>verify</phase>
                        <configuration>
                            <target>
                                <copy file="${project.build.directory}/${project.build.finalName}-dist.jar" tofile="${project.build.directory}/spreadsheets.jar"></copy>
                                <jar jarfile="${project.build.directory}/spreadsheets.jar" update="true" zip64Mode="as-needed">
                                    <manifest>
                                        <attribute name="Main-Class" value="co.uk.diyaccounting.spreadsheets.SpreadsheetsEnvironment"></attribute>
                                    </manifest>
                                </jar>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.immutables</groupId>
                            <artifactId>value</artifactId>
                            <version>${immutables.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-J-Xshare:off</arg>
                        <arg>-J-XX:+EnableDynamicAgentLoading</arg>
                        <arg>-Xlint:-options</arg>
                        <arg>-Xlint:deprecation</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.9.10</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>shade-base</id>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>dist</shadedClassifierName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"></transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>co.uk.diyaccounting.spreadsheets.SpreadsheetsEnvironment</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/DEPENDENCIES</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/maven/**</exclude>
                                        <exclude>**/module-info.class</exclude>
                                        <exclude>META-INF/io.netty.versions.properties</exclude>
                                        <exclude>META-INF/*.properties</exclude>
                                        <exclude>META-INF/native-image/**</exclude>
                                        <exclude>META-INF/LICENSE*</exclude>
                                        <exclude>META-INF/NOTICE*</exclude>
                                        <exclude>META-INF/*LICENSE*</exclude>
                                        <exclude>META-INF/*NOTICE*</exclude>
                                        <exclude>META-INF/FastDoubleParser-LICENSE</exclude>
                                        <exclude>META-INF/FastDoubleParser-NOTICE</exclude>
                                        <exclude>META-INF/bigint-LICENSE</exclude>
                                        <exclude>META-INF.versions.*/**</exclude>
                                        <exclude>Log4j-*.dtd</exclude>
                                        <exclude>Log4j-*.xsd</exclude>
                                        <exclude>Log4j-*.properties</exclude>
                                        <exclude>mime.types</exclude>
                                        <exclude>VersionInfo.java</exclude>
                                        <exclude>mozilla/public-suffix-list.txt</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <minimizeJar>false</minimizeJar>
                            <createSourcesJar>false</createSourcesJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <argLine>-XX:+EnableDynamicAgentLoading
                        -Xshare:off
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-wrapper-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <mavenVersion>3.9.10</mavenVersion>
                </configuration>
            </plugin>
        </plugins>
        <!-- Source directory: CDK Java code lives under infra/main/java -->
        <sourceDirectory>infra/main/java</sourceDirectory>
    </build>
</project>
